[gd_scene load_steps=14 format=2]

[ext_resource path="res://ParallaxBackground.gd" type="Script" id=1]
[ext_resource path="res://Graphics/Clouds/Cloud 4.png" type="Texture" id=2]
[ext_resource path="res://Graphics/Clouds/Cloud 1.png" type="Texture" id=3]
[ext_resource path="res://Graphics/Clouds/Cloud 2.png" type="Texture" id=4]
[ext_resource path="res://Graphics/Clouds/Cloud 3.png" type="Texture" id=5]
[ext_resource path="res://Graphics/Clouds/Cloud 5.png" type="Texture" id=6]
[ext_resource path="res://logo.png" type="Texture" id=7]
[ext_resource path="res://TitleScreen.gd" type="Script" id=8]
[ext_resource path="res://Graphics/sky.png" type="Texture" id=9]
[ext_resource path="res://Fonts/RedeemGold/RedeemGold.ttf" type="DynamicFontData" id=10]

[sub_resource type="DynamicFont" id=1]
size = 64
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 10 )

[sub_resource type="DynamicFont" id=2]
size = 64
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 10 )

[sub_resource type="DynamicFont" id=3]
size = 64
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 10 )

[node name="TitleScreen" type="MarginContainer"]
margin_right = 1024.0
margin_bottom = 600.0
script = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="sky" type="Sprite" parent="."]
position = Vector2( 512, 300 )
texture = ExtResource( 9 )

[node name="ParallaxBackground" type="Container" parent="."]
margin_right = 1024.0
margin_bottom = 600.0
script = ExtResource( 1 )

[node name="Clouds" type="TextureRect" parent="ParallaxBackground"]
margin_left = 101.863
margin_top = 25.4324
margin_right = 313.863
margin_bottom = 145.432
texture = ExtResource( 3 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Clouds2" type="TextureRect" parent="ParallaxBackground"]
margin_left = 104.65
margin_top = 211.679
margin_right = 280.65
margin_bottom = 316.679
texture = ExtResource( 2 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Clouds3" type="TextureRect" parent="ParallaxBackground"]
margin_left = 315.515
margin_top = 207.946
margin_right = 466.515
margin_bottom = 315.946
texture = ExtResource( 4 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Clouds7" type="TextureRect" parent="ParallaxBackground"]
margin_left = 628.276
margin_top = 49.7815
margin_right = 779.276
margin_bottom = 157.782
texture = ExtResource( 4 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Clouds4" type="TextureRect" parent="ParallaxBackground"]
margin_left = 579.0
margin_top = 133.0
margin_right = 770.0
margin_bottom = 233.0
texture = ExtResource( 5 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Clouds6" type="TextureRect" parent="ParallaxBackground"]
margin_left = 448.187
margin_top = 234.083
margin_right = 639.187
margin_bottom = 334.083
texture = ExtResource( 5 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Clouds5" type="TextureRect" parent="ParallaxBackground"]
margin_left = 381.0
margin_top = 61.0
margin_right = 562.0
margin_bottom = 150.0
texture = ExtResource( 6 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Clouds8" type="TextureRect" parent="ParallaxBackground"]
margin_right = 181.0
margin_bottom = 89.0
texture = ExtResource( 6 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer2" type="VBoxContainer" parent="."]
margin_right = 1024.0
margin_bottom = 600.0

[node name="CenterContainer" type="CenterContainer" parent="VBoxContainer2"]
margin_right = 1024.0
margin_bottom = 446.0

[node name="Logo" type="TextureRect" parent="VBoxContainer2/CenterContainer"]
margin_left = 104.0
margin_right = 919.0
margin_bottom = 446.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource( 7 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_right = 1024.0
margin_bottom = 600.0
alignment = 2

[node name="CenterContainer" type="CenterContainer" parent="VBoxContainer"]
margin_top = 436.0
margin_right = 1024.0
margin_bottom = 488.0

[node name="Start" type="LinkButton" parent="VBoxContainer/CenterContainer"]
margin_left = 444.0
margin_right = 580.0
margin_bottom = 52.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 6
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 0.8, 0.619608, 1 )
custom_colors/font_color_pressed = Color( 0.768627, 0.360784, 0, 1 )
text = "Start"
underline = 2

[node name="CenterContainer3" type="CenterContainer" parent="VBoxContainer"]
margin_top = 492.0
margin_right = 1024.0
margin_bottom = 544.0

[node name="Help" type="LinkButton" parent="VBoxContainer/CenterContainer3"]
margin_left = 458.0
margin_right = 566.0
margin_bottom = 52.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 0.8, 0.619608, 1 )
custom_colors/font_color_pressed = Color( 0.768627, 0.360784, 0, 1 )
text = "Help"
underline = 2

[node name="CenterContainer4" type="CenterContainer" parent="VBoxContainer"]
margin_top = 548.0
margin_right = 1024.0
margin_bottom = 600.0

[node name="Credits" type="LinkButton" parent="VBoxContainer/CenterContainer4"]
margin_left = 420.0
margin_right = 604.0
margin_bottom = 52.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 0.8, 0.619608, 1 )
custom_colors/font_color_pressed = Color( 0.768627, 0.360784, 0, 1 )
text = "Credits"
underline = 2
[connection signal="button_down" from="VBoxContainer/CenterContainer/Start" to="." method="_on_Start_button_down"]
[connection signal="pressed" from="VBoxContainer/CenterContainer3/Help" to="." method="_on_Help_pressed"]
[connection signal="pressed" from="VBoxContainer/CenterContainer4/Credits" to="." method="_on_Credits_pressed"]
